2002-09-12  R.K. Owen	<rk@owen.sj.ca.us>
	* config/.cvsignore: New File: Ignore autogenerated files.
	* init/.cvsignore: Ignore autogenerated files.

2002-09-12  R.K. Owen	<rk@owen.sj.ca.us>
	* .cvsignore: Ignore autogenerated files.
	* doc/.cvsignore: Ignore autogenerated files.
	* etc/.cvsignore: Ignore autogenerated files.
	* ext/.cvsignore: Ignore autogenerated files.
	* lib/.cvsignore: Ignore autogenerated files.
	* lib/tests/.cvsignore: Ignore autogenerated files.
	* modulefiles/.cvsignore: Ignore autogenerated files.
	* lib/tests/Makefile.am: Tweeked for autoreconf

2002-09-12  R.K. Owen	<rk@owen.sj.ca.us>
	* README: Updated the anonymous CVS invocation.
	* lib/aclocal.m4: Deleted auto* generated file.
	* lib/configure.ac: Tweeked to autoreconf
	* lib/Makefile.am: Tweeked to autoreconf
	* lib/uvec.h: Added uvec_strfree
	* lib/uvec/uvec_copy_str.c: Uses uvec string fns
	* lib/uvec/uvec_copy_vec.c: Uses uvec string fns
	* lib/uvec/uvec_strfree.c: New file: to dealloc uvec2str()
	generated strings
	* lib/tests/tuvec.c: Updated for uvec changes

2002-09-12  Harlan Stenn  <harlan@pfcs.com>

	* README: Update the instructions for using the CVS version of
	modules.

	* modulefiles/Makefile.in: Deleted auto* generated file.
	* lib/tests/Makefile.in: Ditto.
	* lib/Makefile.in: Ditto.
	* init/Makefile.in: Ditto.
	* ext/Makefile.in: Ditto.
	* etc/Makefile.in: Ditto.
	* doc/Makefile.in: Ditto.
	* config/mkinstalldirs: Ditto.
	* config/missing: Ditto.
	* config/install-sh: Ditto.
	* config/depcomp: Ditto.
	* config/compile: Ditto.
	* configure: Ditto.
	* config.h.in: Ditto.
	* aclocal.m4: Ditto.
	* Makefile.in: Ditto.
	
	* colcomp.c: New file.  Alternative collating algorithm that sorts
	numeric substrings numerically (mostly).

	* lib/Makefile: Remove auto*-generated file.

	* locate_module.c (SortedDirList): Ignore SCCS/ subdirs, too.

	* configure.ac: Disable our "look" for RUNTEST; it drives auto*
	crazy.  Added the --with-file-collate={string,number} test, which