@@ -1,7 +1,7 @@
 ###########################################################################
 ##
 ## File:        ./Makefile.am
-## Versions:    $Id: Makefile.am,v 1.8 2002/09/12 05:59:25 harlan Exp $
+## Versions:    $Id: Makefile.am,v 1.9 2002/09/16 16:49:20 rkowen Exp $
 ## Created:     2002/06/14
 ##
 ###########################################################################
@@ -32,7 +32,7 @@ modulecmd_SOURCES = \
 	ModuleCmd_Whatis.c \
 	cmdAlias.c cmdConflict.c cmdIsLoaded.c cmdInfo.c cmdMisc.c cmdModule.c\
 	cmdPath.c cmdSetenv.c cmdUname.c cmdXResource.c cmdUlvl.c cmdLog.c \
-	cmdTrace.c cmdVersion.c cmdVerbose.c cmdWhatis.c colcomp.c	\
+	cmdTrace.c cmdVersion.c cmdVerbose.c cmdWhatis.c	\
 	init.c locate_module.c utility.c main.c error.c getopt.c version.c
 
 #aclocal.m4 : acinclude.m4
