@@ -1,5 +1,9 @@
 THINGS TODO
 -----------
+* Add an option for user to select between strcmp/strcasecmp/colcomp
+  in filename_compare.
+  (add tests for each of the options.)
+
 * Make "unload" be more sensible, as to what is the opposite behavior
   of "use", "unuse", "load", & "unload" in unloading a module.
 
@@ -14,9 +18,4 @@ THINGS TODO
   in modulefiles.
 
 * Add RPM distribution creation to Makefile.
-
-* Modify how modules recurses through modulefile directories - have
-  it optionally skip RCS and CVS directories.
-
-* Add capability for modules to use a "numeric" sorting of modulefiles.
 
