@@ -1,4 +1,4 @@
-.\" RCSID @(#)$Id: uvec.man,v 1.2 2002/08/02 21:57:50 rkowen Exp $
+.\" RCSID @(#)$Id: uvec.man,v 1.3 2002/09/16 16:49:28 rkowen Exp $
 .\" LIBDIR
 .TH "UVEC" "3rko" "31 Oct 1997"
 .SH NAME
@@ -90,6 +90,7 @@ uvec  *str2uvec(char const *token, char const *string);
 uvec  *vec2uvec(char const * const *vec, int num);
 uvec  *uvec2uvec(uvec const *uv);
 char  *uvec2str(uvec const *uv, char const *token);
+int    uvec_strfree(uvec const *uv, char **str);
 
 .fi
 
@@ -113,24 +114,25 @@ return 0 if no error or return <0 otherwise.
 .TP 15
 .I uvec_set_def_strfns
 register the set of string functions to use by default.
-
+If using a prepackaged set, then set
+.I type
+to the given enum, and set
+.I strfns
+to NULL.
 .TP
 .I uvec_get_def_strfns
-query as to which set of string functions are being used,
-returns a pointer (str_fns *).
-
+return which set of string functions are being used,
+returns a uvec_str struct.
 .TP
 .I uvec_set_strfns
-register the set of string functions to use for the object
-overrides the current set ... don't do this if the object is already
-fully defined.
-
+reset the string functions for an allocated uvec object.
+Should only be done immediately after a uvec_alloc, and not when
+the object contains a vector.  This will screw things up if a different
+set of string functions are used.
 .TP
 .I uvec_get_strfns
-query  as  to which set of string functions
-are being used for the object.
-returns a pointer (str_fns *).
-
+return which set of string functions are being used by the uvec object,
+returns a uvec_str struct.
 .TP
 .I uvec_ctor_
 construct Unix vector to capacity ``cap''
@@ -148,12 +150,16 @@ destroy the Unix vector and it's contents.
 .TP
 .I uvec_alloc_
 allocate the uninitialized uvec object (no vector is allocated)
-using the given set of string functions.
+using the given set of string functions.  Will need to do an
+.I uvec_init*
+afterwards.
 
 .TP
 .I uvec_alloc
 allocate the uninitialized uvec object (no vector is allocated)
-using the default set of string functions.
+using the default set of string functions.  Will need to do an
+.I uvec_init*
+afterwards.
 
 .TP
 .I uvec_dealloc
@@ -171,7 +177,7 @@ using the default set of string functions.
 
 .TP
 .I uvec_close
-destroy the Unix vector contents.
+destroy the Unix vector contents only.
 .TP
 .I uvec_exists
 returns 0 if the vector is not constructed, else non-0.
@@ -279,21 +285,28 @@ If seed <=0 then will "randomly" choose one.
 .TP
 .I str2uvec
 copies a string to a uvec, breaking the string at the given delimiter,
-uses the default string functions for creating the uvec.
+uses the default string functions for creating the new uvec.
 .TP
 .I vec2uvec
 copies a vector (or part of a vector upto num elements) to a uvec,
-uses the default string functions for creating the uvec.
+uses the default string functions for creating the new uvec.
 Set num to a value less than or equal to 0 to grab the entire vector.
 .TP
 .I uvec2uvec
 copies a uvec to a uvec
-uses the default string functions for creating the uvec.
+uses the default string functions for creating the new uvec.
 .TP
 .I uvec2str
 copies a uvec to a string with the elements separated by the
 given delimeter,
-uses the default string functions for creating the uvec.
+uses the uvec object string functions for creating the string.
+.TP
+.I uvec_strfree
+free up the string allocated by
+.I uvec2str
+using the string functions from the given uvec object (which should be
+the same one used in
+.IR uvec2str ).
 
 .SH EXAMPLES
 
