@@ -1,3 +1,14 @@
+2002-09-16  R.K. Owen	<rk@owen.sj.ca.us>
+	* colcomp.c: removed
+	* utility.c: added colcomp.c contents
+	* Makefile.am: removed colcomp.c
+	* main.c: Added DEF_COLLATE_BY_NUMBER output for --version
+	* configure.ac: changed USE_COLCOMP to DEF_COLLATE_BY_NUMBER,
+	  and added memdebug
+	* locate_module.c: changed USE_COLCOMP and GetModuleName for deep dirs.
+	* modules_def.h: check for HAVE_CONFIG_H, and added memdebug
+	* ModuleCmd_List.c: Simplified using uvec objects
+
 2002-09-12  R.K. Owen	<rk@owen.sj.ca.us>
 	* config/.cvsignore: New File: Ignore autogenerated files.
 	* init/.cvsignore: Ignore autogenerated files.
